Add searching beers feature
Update swagger with search parameter, implement searching
implementation. Update tests with searching tests
